--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ web_modules/
 .env.production.local
 .env.local
 
+next.conf.js
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
