--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "debug": "~4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
