--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,15 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "bcrypt": "^5.1.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "util": "^0.12.5",
     "web-vitals": "^3.4.0"
   },
   "scripts": {
