--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
     "util": "^0.12.5",
     "web-vitals": "^3.4.0"
